objects/CRM_CampaignGeographyReferenceData__c.object
<CustomObject>
    <description>Stores Reference data for State, county, CBSA and City</description>
    <fields>
        <fullName>CRM_CBSA__c</fullName>
        <description>Stores CBSA Name</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores CBSA Name</inlineHelpText>
        <label>CBSA</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_County__c</fullName>
        <description>Stores County Name of the County Record</description>
        <inlineHelpText>Enter the County Name of the County Record</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_CountysStateID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>state record ID for the respective County record</description>
        <inlineHelpText>State Name of the respective County record</inlineHelpText>
        <label>County&apos;s State ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CRM_CampaignGeographyReferenceData__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>State</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_CampaignGeographyReferenceData__c</referenceTo>
        <relationshipName>CRM_CountyStateMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_CountysStateName__c</fullName>
        <formula>CRM_CountysStateID__r.CRM_State__c</formula>
        <label>County&apos;s State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Reference data field to activate and deactivate picklistvalue</description>
        <inlineHelpText>Activate value for picklist</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_StateCode__c</fullName>
        <description>State Record: Stores Value of the State Code</description>
        <externalId>true</externalId>
        <inlineHelpText>State Record: Stores Value of the State Code</inlineHelpText>
        <label>State Code</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_StateCounty__c</fullName>
        <formula>CRM_CountysStateID__r.CRM_State__c  &amp; &apos; — &apos; &amp;  CRM_County__c</formula>
        <label>State-County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_State__c</fullName>
        <description>Stores State Name of the State Record</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the State Name of the State Record</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Ref Data - Geography</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CRM_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CBSA</fullName>
        <columns>NAME</columns>
        <columns>CRM_CBSA__c</columns>
        <columns>CRM_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignGeographyReferenceData__c.CBSA</value>
        </filters>
        <label>CBSA</label>
    </listViews>
    <listViews>
        <fullName>County</fullName>
        <columns>NAME</columns>
        <columns>CRM_CountysStateID__c</columns>
        <columns>CRM_County__c</columns>
        <columns>CRM_CountysStateName__c</columns>
        <columns>CRM_IsActive__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignGeographyReferenceData__c.County</value>
        </filters>
        <label>County</label>
    </listViews>
    <listViews>
        <fullName>State</fullName>
        <columns>NAME</columns>
        <columns>CRM_State__c</columns>
        <columns>CRM_StateCode__c</columns>
        <columns>CRM_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignGeographyReferenceData__c.State</value>
        </filters>
        <label>State</label>
    </listViews>
    <nameField>
        <displayFormat>CGRD-{0000000}</displayFormat>
        <label>Campaign Geography Reference Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ref Data - Geography</pluralLabel>
    <recordTypes>
        <fullName>CBSA</fullName>
        <active>true</active>
        <description>Record Type for CBSA</description>
        <label>CBSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>County</fullName>
        <active>true</active>
        <description>Record Type for County</description>
        <label>County</label>
    </recordTypes>
    <recordTypes>
        <fullName>State</fullName>
        <active>true</active>
        <description>Record Type for State</description>
        <label>State</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RecordTypeChange</fullName>
        <active>true</active>
        <description>Restrict Record Type Change</description>
        <errorConditionFormula>AND ( 
ISCHANGED( RecordTypeId ) , $Profile.Name!=&apos;System Adminstrator&apos; 
)</errorConditionFormula>
        <errorMessage>Record Type Change is not allowed</errorMessage>
    </validationRules>
</CustomObject>